# rustracer

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
assets/models/: cornellBox.gltf  license_extractor.py  licenses  reflections.glb  shadows.glb
assets/models/CornellBox/: credits.txt
assets/models/CornellBoxLucy/: cornellBoxLucy.gltf  credits
crates/examples/cornell_box/: Cargo.toml  build.rs
crates/examples/cornell_box/shaders/: RayTracing.rchit  RayTracing.rgen  RayTracing.rmiss
crates/examples/cornell_box/shaders/lib/: GeometryInfo.glsl  PBR.glsl  RayTracingCommons.glsl  Scatter.glsl
crates/examples/cornell_box/src/: acceleration_structure.rs  desc_sets.rs  gui_state.rs  main.rs  model.rs  pipeline_res.rs  ubo.rs
crates/examples/gltf_viewer/: Cargo.toml  build.rs
crates/examples/gltf_viewer/shaders/: AnimationCompute.comp  RayTracing.rahit  RayTracing.rchit  RayTracing.rgen  RayTracing.rmiss  RayTracing.shadow.rahit  RayTracing.shadow.rmiss  Raytracing.shadow.rahit
crates/examples/gltf_viewer/shaders/lib/: Camera.glsl  GeometryInfo.glsl  Material.glsl  PBR.glsl  PunctualLight.glsl  Random.glsl  RayTracing.anyhit  RayTracingCommons.glsl  Raytracing.shadow.rahit  Tonemapping.glsl  UniformBufferObject.glsl
crates/examples/gltf_viewer/src/: args.rs  compute_unit.rs  desc_sets.rs  gui_state.rs  loader.rs  main.rs  pipeline_res.rs  ubo.rs
crates/examples/rt_reflections/: Cargo.toml
crates/examples/rt_reflections/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  shadow.rmiss
crates/examples/rt_reflections/src/: main.rs
crates/examples/triangle/: Cargo.toml
crates/examples/triangle/shaders/: shader.frag  shader.vert
crates/examples/triangle/src/: main.rs
crates/libs/app/: Cargo.toml
crates/libs/app/src/: camera.rs  lib.rs  types.rs
crates/libs/asset_loader/: Cargo.toml
crates/libs/asset_loader/src/: aabb.rs  acceleration_structures.rs  animation.rs  cubumap.rs  error.rs  geometry.rs  globals.rs  image.rs  lib.rs  light.rs  material.rs  morph.rs  scene_graph.rs  skinning.rs  texture.rs
crates/libs/gltf/: Cargo.toml
crates/libs/gltf/src/: image.rs  lib.rs  material.rs  texture.rs
crates/libs/gui/: Cargo.toml
crates/libs/gui/src/: lib.rs
crates/libs/resource_manager/: Cargo.toml
crates/libs/resource_manager/src/: lib.rs
crates/libs/vulkan/: Cargo.toml
crates/libs/vulkan/src/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  image.rs  instance.rs  lib.rs  physical_device.rs  query.rs  queue.rs  sampler.rs  surface.rs  swapchain.rs  sync.rs
crates/libs/vulkan/src/pipeline/: compute.rs  graphics.rs  layout.rs  mod.rs  shader.rs
crates/libs/vulkan/src/ray_tracing/: acceleration_structure.rs  mod.rs  pipeline.rs  shader_binding_table.rs
crates/libs/vulkan/src/utils/: mod.rs  platforms.rs
