[workspace]
members = [
    "crates/examples/*",
    "crates/libs/*",
]

[workspace.package]
authors = ["Kosumi <chankocyo@gmail.com>"]
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
winit = {version="0.27.5"}
nalgebra = "*"
ash = {version = "0.37.2", features = ["linked", "debug"]}
memoffset = "0.8.0"
tobj = "3.2.4"
gltf = {version = "1.1.0", features = [
    "names",
    "extras",
    "image_jpeg_rayon",

    "KHR_materials_ior",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_transmission",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_materials_specular",
    "KHR_texture_transform",
    "KHR_materials_unlit",
    "KHR_lights_punctual",
]}
#egui = "0.21.0"
#egui-winit = "0.21.1"
#egui-winit-ash-integration = "0.3.0"
log = "0.4.17"
anyhow = "*"
pretty_env_logger = "0.4.0"
gpu-allocator = { version = "0.22", default-features = false, features = ["vulkan"] }

imgui = "0.11.0"
imgui-winit-support = "0.11.0"
imgui-rs-vulkan-renderer = { version = "1.6", features = ["gpu-allocator", "dynamic-rendering"] }

thiserror = "1.0"

glam = { version = "0.23.0", features = ["serde"] }

glsl-to-spirv = "0.1.7"

rand = "0.8.5"
shellexpand = "3.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
mikktspace = "0.3.0"
rayon = "1.7"
cfg-if = "1.0.0"
interpolation = "0.2.0"

[workspace.dependencies.image]
version = "0.24.6"
default-features = false
features = ["png", "jpeg"]
