[package]
name = "cornell-box"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
gltf = { path = "../../libs/gltf" }
gui = { path = "../../libs/gui" }
rand.workspace = true
strum.workspace = true
strum_macros.workspace = true
