[package]
name = "gltf-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
gui = { path = "../../libs/gui" }
asset_loader = { path = "../../libs/asset_loader", features = ["ash"]}
rand.workspace = true
strum.workspace = true
strum_macros.workspace = true
log.workspace = true
clap.workspace = true

