[package]
name = "rt_reflections"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../../libs/app" }
gltf = { path = "../../libs/gltf" }
gui = { path = "../../libs/gui" }
