[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
anyhow.workspace = true
winit.workspace = true
nalgebra.workspace = true
gpu-allocator.workspace = true
resource_manager = {path = "../resource_manager"}

vulkan = { path = "../vulkan" }
gui = { path = "../gui" }
