[package]
name = "asset_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
thiserror.workspace = true
gltf.workspace = true
glam.workspace = true
resource_manager = {path = "../resource_manager"}
vulkan = {path = "../vulkan", optional = true}
anyhow.workspace = true

[features]
default = []
ash = ["dep:vulkan"]