[package]
name = "asset_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
thiserror.workspace = true
gltf.workspace = true
glam.workspace = true
resource_manager = {path = "../resource_manager"}
vulkan = {path = "../vulkan", optional = true}
anyhow.workspace = true
mikktspace.workspace = true
image.workspace = true
strum.workspace = true
strum_macros.workspace = true
rayon = {workspace = true, optional = true}
cfg-if.workspace = true
interpolation.workspace = true
rand.workspace = true

[features]
default = ["rayon", "ash"]
ash = ["dep:vulkan"]
rayon = ["dep:rayon"]