[package]
name = "gltf"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
thiserror.workspace = true
gltf.workspace = true
glam.workspace = true
resource_manager = {path = "../resource_manager"}
app = {path = "../app"}