[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
anyhow.workspace = true
ash.workspace = true
gpu-allocator.workspace = true
winit.workspace = true
vk-sync = "0.1.6"
